--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -23,8 +23,8 @@
 
 <div class = "wrapper">
    
-        <div class="title"><h1>Suzanne Milligan's Blog</h1></div>
-        <p>Article previews below</p>
+        <div class="title"><h3>Welcome to Suzanne Milligan's Blog</h3></div>
+        <p>Article previews below, please click on any that are of interest.</p>
     </div>
     <div class = "content">
     {% for post in posts %}
