--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -8,41 +8,47 @@
         
       <a href = '{{url_for("login")}}'><b><em>Now please logon></em></b></a>
       {% endif %}
+  <div class="container-fluid">
+    <form method="post">
+      <div class="pt-2 ps-1 pe-5 mb-5 pt-2">
+      
+          <label for="searchSite" class="form-label"><b>{{ form.search.label }}</b></label>
+                    
+                {{form.search}}
+             
+                {% for error in form.search.errors %}
+                <span style="color: red;">[{{ error }}]</span>{% endfor %}
 
-      <form method="post">
-      <dl>
-        {{ form.search.label }} {{form.search}}
-        <p>
-            {% for error in form.search.errors %}
-            <span style="color: red;">[{{ error }}]</span>{% endfor %}
-
-      </p>
-
-      </dl>
-      <p><input type="submit" value="Search">
-      </p></form>
-
+         
+          <button class="btn btn-secondary btn-sm me-2" type="submit">Search</button>
+        
+      </div>
+    </form>
+  </div>  
 
 
         
       <div class="title"><h3>Welcome to Suzanne Milligan's Blog</h3>
           <p>Article previews below, please click on any that are of interest.</p>
       </div>
-        <div class="preview">
-          {% for post in posts %}
-
-          <p><a href ="{{ url_for('post', post_id=post.id) }}"><img src="{{ url_for('static', filename='img/' + post.image_file) }}" >
-            "{{ post.title }}"</a> 
-              by {{ post.user.username }}
-              on {{ post.date }}
-            <b> {{ post.subtitle }}</b>
-          </p>
+      <div class="row">
+       
+            {% for post in posts %}
+            <div class="col-lg-3 col-md-4 col-sm-6 mt-3 pt-1 d-flex justify-content-center text-center" style="border:0.1rem solid; border-color: #C65F63" id="bpreviews">
+              <p><a href ="{{ url_for('post', post_id=post.id) }}"><img src="{{ url_for('static', filename='img/' + post.image_file) }}" class="rounded" style="border:0.1rem solid; border-color: #333644" width="100px" height = "100px" ><br>
+               <b>"{{ post.title }}"</b></a> <br>
+                  by {{ post.user.username }}<br>
+                <small>on {{ post.date }}</small><br>
+                <em> {{ post.subtitle }}</em>
+              </p>
+            </div>
         
-      
-      {% endfor %}
-        </div>
+            {% endfor %}
+       
+      </div>    
+       
       <div class = "allpostslink">
-        <h2><a href ="{{ url_for('allposts') }}" >To access all posts </a> </h2>
+        <h3><a href ="{{ url_for('allposts') }}" >To access all posts </a> </h3>
       </div> 
    
 {% endblock content %}
