--- a/blog/static/style.css
+++ b/blog/static/style.css
@@ -9,12 +9,15 @@ body {
 }
 #home_content {
     background-color: #F6E1B8;
-    height: 100%;
+    min-height: 100vh;
     
 }
-#wrapping {
-    height: 100vh;
+/* code to make the central area of the site full length of screen from https://stackoverflow.com/questions/23046801/height-not-100-on-container-fluid-even-though-html-and-body-are */
+.container-fluid {
+    height: 100%;
+    overflow-y: hidden; /* don't show content that exceeds my height */
 }
+
 .navbar {
     
     text-align: center;
