styled registration and logon forms

--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -1,4 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>This is About Us page</h1>
+<div class = "mx-auto pt-3" style="width:80%">
+    <h3>This is About Us page</h3>
+</div>    
 {% endblock content%}
