--- a/blog/templates/allposts.html
+++ b/blog/templates/allposts.html
@@ -4,7 +4,7 @@
 <div class = "mx-auto" style="width:80%">
     
         <h3>All Posts</h3>
-    To arrange files by date please click here <a href="{{url_for('ascpost')}}">for <b>ascending</b> order.</a>
+        To arrange files by date please click here <a href="{{url_for('ascpost')}}">for <b>ascending</b> order.</a>
         and please click here <a href="{{url_for('descpost')}}" >for <b>descending</b> order.</a>
 
 
@@ -12,8 +12,8 @@
         {% for post in posts %}
 
         <p><a href ="{{ url_for('post', post_id=post.id) }}"><img src="{{ url_for('static', filename='img/' + post.image_file) }}" class="rounded" style="border:0.1rem solid; border-color: #333644" width="100px" height = "100px" >
-    <h3>"{{ post.title }}"</h3></a> 
-    <em>by {{ post.user.username }}</em>
+        <h3>{{ post.title }}</h3></a> 
+        <em>by {{ post.user.username }}</em>
         on {{ post.date }}
         <b> Subtitle: {{ post.subtitle }}</b>
         <br>
