--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -1,6 +1,31 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class = "mx-auto pt-3" style="width:80%">
-    <h3>This is About Us page</h3>
+<div class = "pt-3" style="width:80%">
+    <div class="text-center" id="aboutHeading">
+        <h3>About me...</h3>
+        <img src="{{ url_for('static', filename='img/sue.jpg') }}" class="rounded-pill" alt="sue" style="border:0.1rem solid; border-color: #333644">
+    </div>
+    <div class="pt-5 ps-2 ms-5"  id="aboutBody">    
+  
+        <h3>My name is Suzanne Milligan.</h3><br>
+        <p>I am currently studying for a Master's degree in computing at Cardiff University. Before I was a student at Cardiff I 
+            worked in various IT support roles for more than 20 years. My last role was as a Schools ICT Engineer, which involved 
+            travelling to different primary schools in Bridgend County to offer ICT support.</p></br>
+
+        <p>I have been interested in computers and computing for a long time - since the days of the Commodore-64 in fact! 
+            I studied for my Undergraduate degree in Materials Science and Engineering at Imperial College in London. After my
+            degree I worked in various laboratories for around 5 years. In 1999 I moved to Scotland and changed my career by studying 
+            for my MCSE (in NT4!). My first job in IT was at St Margaret University in Edinburgh, as a Helpdesk Officer. From there I progressed
+            to IT Officer to Senior IT Officer. I moved to Wales in 2006 and worked at Pencoed Comprehensive as an ICT Technician for 10 years
+            before changing to primary school support.</p>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>    
+
+    
+    </div>
 </div>    
 {% endblock content%}
