addressed minor issues

--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -26,8 +26,8 @@
             <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #84577C">
                 <div class="container-fluid">
 
-                    <a class = "navbar-brand ms-5 me-5 ps-5 pe-5" href="{{ url_for('allposts') }}">
-                        <img src= "{{ url_for('static', filename='img/default.jpg') }}" alt="stick_man_image"class="rounded" style="border:0.1rem solid; border-color: #333644">
+                    <a class = "navbar-brand ms-5 me-5 ps-5 pe-5" href="{{ url_for('home') }}">
+                        <img src= "{{ url_for('static', filename='img/sue.jpg') }}" alt="sue_image"class="rounded-pill" style="border:0.1rem solid; border-color: #333644" width="100px" height="100px">
                     </a>
             
                     <button class="navbar-toggler ms-1" type="button" data-bs-toggle="collapse" data-bs-target="#blogMenuToggle" aria-controls="blogMenuToggle" aria-expanded="false" aria-label="Toggle navigation">
