--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -36,7 +36,7 @@
             {% for post in posts %}
             <div class="col-lg-3 col-md-4 col-sm-6 mt-3 pt-1 d-flex justify-content-center text-center" style="border:0.1rem solid; border-color: #C65F63" id="bpreviews">
               <p><a href ="{{ url_for('post', post_id=post.id) }}"><img src="{{ url_for('static', filename='img/' + post.image_file) }}" class="rounded" style="border:0.1rem solid; border-color: #333644" width="100px" height = "100px" ><br>
-               <b>"{{ post.title }}"</b></a> <br>
+               <b>{{ post.title }}</b></a> <br>
                   by {{ post.user.username }}<br>
                 <small>on {{ post.date }}</small><br>
                 <em> {{ post.subtitle }}</em>
