--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet"> 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet"> 
+    <!-- link to connecting to google api for icon font -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- my favicon            -->
     <link rel = "icon" href = "{{url_for('static', filename='img/favicon.ico')}}" >
     <title>Sue Milligan</title>
@@ -131,13 +133,23 @@
         </div>
     </div>
     <footer>
-        <button class="btn btn-secondary btn-sm text-nowrap" type="button">
-            <a href="{{ url_for('home') }}">Home</a>
-        </button> 
-        <button class="btn btn-secondary  btn-sm text-nowrap" type="button">   
-            <a href="{{ url_for('about') }}">About Us</a>
-        </button>
-        <p>Copyright 2021. Built by Suzanne Milligan.</p>
+                <div class="row">
+                    <div class="col">
+                        <a href="https://www.facebook.com/sue.milligan" target="_blank"><span class="material-icons md-dark md-36">facebook</span></a>
+                        <a href="https://www.facebook.com/sue.milligan" target="_blank">Facebook</a>
+                    </div>
+                    <div class="col">
+                        <a href="https://www.linkedin.com/in/suzanne-milligan-48264598/" target="_blank"><span class="material-icons md-dark md-36">link</span></a>
+                        <a href="https://www.linkedin.com/in/suzanne-milligan-48264598/" target="_blank">LinkedIn</a>    
+                    </div>    
+                    <div class="col">
+                        <a href="mailto:milligansp@cardiff.ac.uk"><span class="material-icons md-dark md-36">email</span></a>
+                        <a href="mailto:milligansp@cardiff.ac.uk">Email me</a>
+                    </div>
+                    <div class="col">
+                        <p>&#169; 2021.Built by Suzanne Milligan.</p>
+                    </div>
+                </div>   
     </footer>   
 
     <!-- links to the javascript files needed for bootstrap to run  -->
