--- a/blog/templates/results.html
+++ b/blog/templates/results.html
@@ -8,17 +8,29 @@
 <br>
 <br>
 
-{% for result in results %}
-    
-   
-    <tr>
-    <td>{{ result }}</td>
-      
-    </tr>
-   
-    <br>
-    <br>
+    <div class="row">
+        {% for result in results %}
+        <div class="col-lg-6 mt-3 pt-1 d-flex justify-content-center text-center" style="border:0.1rem solid; border-color: #C65F63" id="resultreviews">
+            <a href ="{{ url_for('post', post_id=result.id) }}">
+                <img src="{{ url_for('static', filename='img/'+ result.image_file) }}" class="rounded" style="border:0.1rem solid; border-color: #333644" width="100px" height = "100px">
+            </a>
+            <br>
+            <b>{{ result.title }}</b>
+            <br>
+            <small>by {{ result.user.username }}</small>
+            <br>
+            <small>on {{ result.date }}</small>
+            <em> Subtitle: {{ result.subtitle }}</em>
+            <br>
+        </div>
+        <div class="col-lg-6 mt-3 pt-1 d-flex justify-content-center text-center" style="border:0.1rem solid; border-color: #C65F63" id="resultreviews">
+            <b>{{ result.comment }}</b> 
+        </div>
+        {% endfor %}
+    </div>
 
-{% endfor %}
+
+
 
 {% endblock  %}
+
